--- a/paper/Poissons.tex
+++ b/paper/Poissons.tex
@@ -29,7 +29,7 @@
 \email{}
 
 \author[G. Laplante-Anfossi]{Guillaume Laplante-Anfossi}
-\address{School of Mathematics and Statistics, University of Melbourne, Victoria, Australia}
+\address{School of Mathematics and Statistics, The University of Melbourne, Victoria, Australia}
 \email{guillaume.laplanteanfossi@unimelb.edu.au}
 
 \author{Vincent Pilaud}
@@ -38,7 +38,7 @@
 \urladdr{\url{http://www.lix.polytechnique.fr/~pilaud/}}
 
 \author[K. Stoeckl]{Kurt Stoeckl}
-\address{School of Mathematics and Statistics, University of Melbourne, Victoria, Australia}
+\address{School of Mathematics and Statistics, The University of Melbourne, Victoria, Australia}
 \email{kstoeckl@student.unimelb.edu.au}
 
 \date{\today}
