--- a/paper/Poissons.bib
+++ b/paper/Poissons.bib
@@ -202,3 +202,24 @@
   journal = {Journal de l'{\'E}cole polytechnique},
   pages = {to appear},
 }
+
+@article{LodayRonco11,
+  title = {Permutads},
+  author = {Loday, Jean-Louis and Ronco, Mar{\'i}a},
+  year = {2013},
+  journal = {J. Comb. Theory, Ser. A},
+  volume = {120},
+  number = {2},
+  pages = {340--365}
+}
+
+@article{MARKL2020105277,
+  title = {Permutads via Operadic Categories, and the Hidden Associahedron},
+  author = {Markl, Martin},
+  year = {2020},
+  journal = {Journal of Combinatorial Theory, Series A},
+  volume = {175},
+  pages = {105277},
+  issn = {0097-3165},
+  doi = {10.1016/j.jcta.2020.105277}
+}
