--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -183,7 +183,9 @@ two of which (the $\LA$ and $\SU$ diagonals) agree with the generalized Tamari o
 
 This answers the first question in \cite[Remark 3.14]{LA21}.
 
-\Guillaume{To be worked from here}
+Two other important families of generalized permutahedra are the \emph{Loday associahedra} and \emph{Forcey--Loday multiplihedra}, which encode respectively $\Ainf$-algebras and $\Ainf$-morphisms \cite[Prop. 4.9]{MazuirLA22}, as well as $\Ainf$-categories and $\Ainf$-functors \cite[Section 4.3]{MazuirLA22}.
+Using the same techniques as in the case of the operahedra, they were endowed with diagonals and compatible operad and operadic bimodule structures in \cite[Theorem~1]{MazuirLA22}.
+An analogous notion of \emph{operadic diagonal} is available for these polytopes, see \cite[Proposition 2.14]{MazuirLA22}.
 
 \begin{samepage}
 \begin{theorem}[Operadic structures on the multiplihedra]
@@ -201,14 +203,14 @@ two of which (the $\LA$ and $\SU$ diagonals) agree with the Tamari(-type) order 
     The proof is similar to the one of \cref{thm:operahedra}, using the results of \cite{MazuirLA22}.
 \end{proof}
 
-
+We shall see now that these different operadic structures are related to one another in the strongest possible sense: they are all isomorphic as topological cellular operadic structures.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \subsection{Relating operadic diagonals}
 
-In this section we show that the four diagonals are isomorphic, and that this induces an isomorphism of the corresponding operadic structures on the operahedra, multiplihedra and associahedra.
+%In this section we show that the four diagonals are isomorphic, and that this induces an isomorphism of the corresponding operadic structures on the operahedra, multiplihedra and associahedra.
 
 \Guillaume{faire direct l'iso topologique, puis traduire?}
 
@@ -1341,11 +1343,9 @@ We have the following equivalent characterisations of the $\LAD$ and $\SUD$ diag
     \item Cubical?
 \end{itemize}
 
-\subsection{Higher algebraic consequences}
 
-\subsubsection{Shuffle trees}
+\subsection{Shuffle trees}
 
-\subsection{Topological enhancement}
 
 
 
