First try for operadic iso

--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -81,6 +81,9 @@
 \newcommand{\SUD}{\triangle^{\mathrm{SU}}}
 \newcommand{\LAD}{\triangle^{\mathrm{LA}}}
 
+%Category
+\newcommand{\PolySub}{\mathsf{Poly}}
+
 %Standardisation function
 \DeclareMathOperator{\std}{std}
 
