--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -644,7 +644,6 @@ For any integers~$\ell,n \geq 1$, the \defn{$(\ell,n)$-braid arrangement}~$\lBra
 \end{tikzpicture}}
 \caption{Above : The braid arrangement $\braidArrangement[3]$ and its associated intersection poset. Middle : The braid arrangement $\lBraidArrangement[3][2]$ and its associated intersection poset. Below : The intersection poset of $\lBraidArrangement[3][2]$ in terms of forests. \BDO{I put the tikz-code in the latex : do I need to compile it separately ?}}
 \end{figure}
-
 \end{remark}
 
 \begin{definition}
@@ -768,7 +767,6 @@ f_0(\lBraidArrangement) = \ell \big( (\ell-1) n + 1)^{n-2}.
 \end{theorem}
 
 \begin{proof}
-\vincent{Berenice, the floor is yours...} \BDO{Thanks ! Which colours do you want for your permutohedra :-)?}
 We adapt the proof from \cite{CKSS04}. By rooting in the part of colour $1$ containing $1$, the number of vertices of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ is the same as the number of Cayley trees rooted in $1$ with an edge-coloring by $\{1, \ldots, \ell\}$ satisfying that the colour of an edge from a child is different from the colour of the edge between the parent and the child. A common reasoning for counting Cayley trees is the use of its Prüfer code defined by recursively pruning the smallest leaf and writing down the number of its parent. This bijection can be adapted to edge-coloured Cayley trees by writing down the number of the parent and the colour of the edge linking the leaf to its parent. We get a coloured word of length $n-1$. Their are two possibilities:
 \begin{itemize}
 \item either the node we are removing is attached to the root labelled by $1$ and there are $\ell$ possible different colours for the edge ($\ell$)
@@ -780,7 +778,7 @@ We adapt the proof from \cite{CKSS04}. By rooting in the part of colour $1$ cont
 
 \begin{theorem}
 \label{thm:verticesRefinedlnBraidArrangement}
-For any~$\b{k}  = (k_1, \dots, k_\ell)$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n-1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$k_i$ is given by
+For any~$\b{k} \eqdef (k_1, \dots, k_\ell)$ such that~$0 \le k_i \le n-1$ for all~$i \in [\ell]$ and~$\sum_{i=1}^\ell k_i = n-1$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\lBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$k_i$ is given by
 \[
 f_{\b{k}}(\lBraidArrangement) = n^{\ell-1}  \binom{n-1}{k_1, ..., k_l} \prod_{i=1}^\ell (n-k_i)^{k_i-1}.
 \]
@@ -789,14 +787,17 @@ f_{\b{k}}(\lBraidArrangement) = n^{\ell-1}  \binom{n-1}{k_1, ..., k_l} \prod_{i=
 \end{theorem}
 
 \begin{proof}
-\vincent{TODO}
+\BDO{TODO}
 \end{proof}
+
+\vincent{TODO: Check whether we can say something on the facets as well. I guess not, but I want to be sure.}
+
+\vincent{TODO: Discuss generalizations to $\ell$ copies of an arbitrary arrangement, or a graphical arrangement.}
 
 \subsection{Enumerative results for any diagonal} 
 \label{s:facets}
 
 We now specialize the results of the previous section to the case~$\ell = 2$ to derive enumerative results on the diagonal of the permutahedron.
-\vincent{TODO. Nice bijection for vertices. Generating functions for facets and bounded facets.}
 
 Note that
 \begin{align*}
@@ -928,6 +929,8 @@ f_{k_1, k_2}(\lBraidArrangement[n][2]) = \underbrace{\frac{1}{k_1+1}  \phantom{\
 \]
 \end{proof}
 
+\vincent{Do we want to mention here the refinement counting spanning trees of~$K_{n+1}$ containing~$(0,1)$ according to their number of nodes at even distance from the root?}
+
 \begin{theorem}
 \label{thm:facets2BraidArrangement}
 The coefficient of~$x^{n-1}$ in the M\"obius polynomial~$\mobPol[{\lBraidArrangement[n][2]}]$ of the $(2,n)$-braid arrangement~$\lBraidArrangement[n][2]$ is given by
@@ -942,7 +945,13 @@ We prove that the exponential generating function of the coefficient of~$x^{n-1}
 \[
 1 + \sum_{n \ge 1} \frac{[x^{n-1}] \, \mobPol[{\lBraidArrangement[n][2]}] \, y \, z^n}{(n+1)!} = \exp \bigg( \sum_{m \ge 1} \frac{(-1)^{m-1} C_m \, y \, z^m}{m} \bigg).
 \]
-\vincent{TODO}
+\vincent{TODO. The proof from my email is in the comments.}
+%Consider a forest of cliques F. Each connected component K is a tree of cliques. Consider the labeled intersection tree of this tree of cliques (whose nodes are the cliques and whose edges are the intersections of cliques, labeled by unique element in the intersection). As the clique corresponding to each node of this intersection tree is just formed by the labels of the edges incident to it, we can forget the cliques inside the nodes and just remember the labels on the edges. Now root K on the node corresponding to the clique of F_0 containing the smallest element of K, orient all edges towards this root, order the incoming edges at each node by their labels. You get a rooted planar tree, with some labels on the edges. Consequently, I can see a forest of cliques with c connected as a set of c rooted planar trees whose edges are labeled by [n] (each label appears only once, in only one of the trees), and such that
+%	(a) the labels of the edges incoming to a node are well ordered (ie. increasing from the left node to the right node),
+%	(b) in each tree, the edge with the smallest label is incident to the root.
+%Conversely, I can start from a set of c rooted planar trees, I can label the edges by choosing a permutation of [n], except that 
+%	(a) at each node of each of my rooted planar trees, I should divide by the factorial of the incoming degree of my node… this is the (|p|-1)!
+%	(b) in each rooted planar tree T, I should divide by the number of edges of my tree to replace the smallest label on an edge incident to the root… this is the /n.
 \end{proof}
 
 \begin{corollary}
@@ -955,6 +964,13 @@ b_{n-1}(\lBraidArrangement[n][2])
 % & = - (n+1)! \, [z^{n+1}] \exp \left( - \sum_{m \ge 1} \frac{z^m}{m(m+1)} \binom{2m}{m} \right) 
 & = (n-1)! \, [z^{n-1}] \exp \bigg( \sum_{m \ge 1} C_m \, z^m \bigg).
 \end{align*}
+The corresponding integer sequences are
+\begin{align*}
+1, 3, 17, 149, 1809, 28399, 550297, 12732873, \dots & \qquad \text{\OEIS{A213507}}, \\
+\text{and}\qquad
+1, 1, 5, 43, 529, 8501, 169021, 4010455, 110676833, \dots & \qquad \text{\OEIS{A251568}}.
+\end{align*}
+\vincent{TODO: improve presentation}
 \end{corollary}
 
 \begin{proof}
@@ -1007,6 +1023,7 @@ H'(z)
 & = 2 \, C(z) \Big( C'(z) \big( 2 - C(z) \big) - C(z)^3 \Big) \exp \big( - D(z) - z \, D'(z) \big),
 \end{align*}
 which vanishes by~\eqref{eq:diff}.
-\vincent{Can we make a bijective proof of the last equality?}
+
+\vincent{Can we make a bijective proof of the equality $F(z) = \frac{\partial}{\partial z} G(z)$?}
 \end{proof}
 
